5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1798_2571.log
== TEST (2019-06-12 12:43:51) 
-- CODE:
x = (input(":")
j = ''
for i in range(len(x)):
	if(x[i].upper()!="A"):
	  j = j + x[i]
	elif(x[i].upper()=="A"):
		j = j
print(j)
-- ERROR:
File "XXXX", line 2
    j = ''
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:44:01) 
-- CODE:
x = (input(":")
j=''
for i in range(len(x)):
	if(x[i].upper()!="A"):
	  j = j + x[i]
	elif(x[i].upper()=="A"):
		j = j
print(j)
-- ERROR:
File "XXXX", line 2
    j=''
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:44:06) 
-- CODE:
x = input(":")
j=''
for i in range(len(x)):
	if(x[i].upper()!="A"):
	  j = j + x[i]
	elif(x[i].upper()=="A"):
		j = j
print(j)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:26) 
-- CODE:
x = input(":")
j=''
for i in range(len(x)):
	if(x[i].upper()!="A"):
	  j = j + x[i]
	elif(x[i].upper()=="A"):
		j = j
print(j)
-- EXECUTION TIME:
0.836701
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
